# TAI_vnpy_gateway

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG_MINIFY.md  Dockerfile  KEEP_LIST.md  README.md  REFACTOR_PLAN.md  __tmp_intraday_src.py  __tmp_parse_symbol.py  __tmp_rest_introspection.py  alpha_train.py  check_col.py  config.yaml  fetch.py  fubon_connect.py  fubon_gateway.py  import inspect.py  naming_report.md  opti.py  optimese.py  pyproject.toml  rename_map.yml  requirements-dev.txt  requirements.txt  run.py  run3.py  shioaji_gateway.py  shioaji_session_handler.py  shioaji_session_manager.py  spectral.yaml  test_callbacks.py  test_fetch_contracts.py  test_login.py  test_rpt.py
.github/workflows/: ci.yml  naming.yml  python-ci.yml
adapters/: __init__.py  fubon_to_vnpy.py
alpha_model_outputs/: all_models_best_results_summary.json  best_lasso_model.joblib  best_mlp_model.joblib
clients/: __init__.py  fubon_api_client.py
config/: api_test_cases.toml  pipeline.toml  symbols.toml
docs/: API_Analysis.md  API文檔.md  DEVELOPER.md  PROJECT_OVERVIEW.md  callback_data_fields.md  market_proxy_design.md  sandbox_test_report.md  stock_order_mapping.md
docs/development/: CHANGELOG_MINIFY.md  DELETE_OR_MOVE_LIST.md  KEEP_LIST.md  NAMESPEC.md  REFACTOR_PLAN.md  consistency_report.md  deploy_instructions.md  smoke_tests.md
examples/: fubon_service_api.py  run_fubon_gui.py
extras/config/: pipeline.toml  symbols.toml
extras/docs/: GATEWAY_ACTION_ITEMS.md  GATEWAY_REDESIGN_PLAN.md  HEALTHCHECKS.md  OBSERVABILITY.md  OPERATIONS.md  ROOT_CAUSE_CONTRACT_LOOKUP.md  mapping.md  runbook.md  schema.sql
extras/legacy/: requirements-dev.txt  run.py
extras/storage/: __init__.py  (+1 more)
log/: client.log.20251020  client.log.20251021  client.log.20251022  client.log.20251023  notify.log.20250625  notify.log.20251020  notify.log.20251021  notify.log.20251022  notify.log.20251023  program.log.20250625  program.log.20251020  program.log.20251023
src/: __init__.py  enum_map.py
tests/: __init__.py  contract_flow_test.py  test_api_functions.py  test_enum_map.py  test_fubon_gateway.py  test_gateway_unit.py  test_ingest.py  test_stock_orders.py
tick_csv/: 2316_2025-06-12.csv  2316_2025-06-13.csv  2316_2025-06-16.csv  2316_2025-06-17.csv  2316_2025-06-18.csv  2316_2025-06-19.csv  2316_2025-06-20.csv  2357_2025-06-12.csv  2357_2025-06-13.csv  2357_2025-06-16.csv  2357_2025-06-17.csv  2357_2025-06-18.csv  2357_2025-06-19.csv  2357_2025-06-20.csv  2454_2025-06-12.csv  2454_2025-06-13.csv  2454_2025-06-16.csv  2454_2025-06-17.csv  2454_2025-06-18.csv  2454_2025-06-19.csv  2454_2025-06-20.csv
tools/: check_continuous_contracts.py  process_rpt_files.py
vnpy_fubon/: __init__.py  account.py  config.py  exceptions.py  fubon_connect.py  gateway.py  logging_config.py  mappings.py  market.py  normalization.py  order.py  vnpy_compat.py
(+19 files in other folders)
