[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vnpy-fubon"
version = "0.1.0"
description = "Fubon Securities trading gateway utilities for vn.py"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "vn.py Community" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "fastapi>=0.110,<0.116",
  "requests>=2.31,<3",
  "websockets>=11,<12",
  "vnpy>=3.9,<4",
  'importlib-metadata>=6,<7; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-dotenv>=0.5",
  "ruff>=0.5.0",
  "black>=24.3",
  "isort>=5.13",
  "libcst>=1.1",
  "pyyaml>=6.0",
  "pre-commit>=3.5",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = ["timeout: mark tests with a timeout in seconds"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["vnpy_fubon", "clients", "adapters"]
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["vnpy_fubon", "clients", "adapters"]
combine-as-imports = true
